grammar.js
    source_file: $ => seq(
      optional($.export_header),
      $.class_file,
    ),

    class_file: $ => repeat1(choice(
      $.forward_declaration_section,
      $.structure_definition,
      $.global_variables_section,
      $.shared_variables_section,
      $.instance_variables_section,
      $.class_type_definition,
      $.global_variable_declaration,
      $.external_function_prototypes,
      $.forward_function_prototypes,
      $.event_definition,
      $.function_definition,
      $.on_event_definition,
      // $.inner_class_type_definition,
    )),

    _subroutine_prototype: $ => seq(
      optional($.global_keyword),
      optional($.access_modifier),
      $.subroutine_keyword,
      alias($.identifier, $.subroutine_name),
      $.parameter_list,
      optional($.throws_clause),
    ),

    function_definition: $ => choice(
      $._function_definition,
      $._subroutine_definition,
    ),

    _function_definition: $ => seq(
      $.function_definition_statement,
      optional(alias($.scriptable_block, $.function_definition_block)),
      $.function_definition_statement_end,
    ),

    _subroutine_definition: $ => seq(
      $.subroutine_definition_statement,
      optional(alias($.scriptable_block, $.subroutine_definition_block)),
      $.subroutine_definition_statement_end,
    ),

    subroutine_definition_statement: $ => seq($._subroutine_prototype, $.statement_separation),

    subroutine_definition_statement_end: $ => seq($.end_keyword, $.subroutine_keyword),

    parameter_list: $ => seq($.open_parenthesis, commaSep($.parameter), $.close_parenthesis),

    local_variable_declaration: $ => seq(
      optional($.constant_keyword),
      alias($.type, $.variable_type),
      optional($.variable_precision),
      $.variable_declaration_list,
    ),

    variable_declaration_list: $ => commaSep1($.variable_declaration),

    variable_declaration: $ => seq(
      alias($.identifier, $.variable_name),
      optional($.array_suffix),
      optional(seq('=', alias($.r_value_expression, $.initial_value))),
    ),

    statement: $ => choice(
      $.conditional_compilation_statement,
      $.choose_statement,
      $.do_loop,
      $.for_loop,
      $.goto_label,
      $.if_statement,
      $.inline_if_statement,
      $.local_variable_declaration_statement,
      $.try_catch_statement,
      $.while_loop,
      seq($.inline_statement, optional($.statement_separation)),
      $.sql_statement,
    ),

    choose_statement: $ => seq(
      $.choose_case_statement,
      seq(
        repeat1($.choose_case_clause),
        optional($.choose_case_else_clause),
      ),
      $.choose_statement_end,
    ),

    choose_case_statement: $ => seq(
      $.choose_keyword,
      $.case_keyword,
      alias($.r_value_expression, $.test_expression),
      optional($.statement_separation),
    ),

    choose_case_clause: $ => seq(
      $.case_keyword,
      alias(choice(
        $.choose_case_to_expression,
        $.choose_case_is_relational_expression,
        $.choose_case_condition_expression,
      ), $.choose_case_clause_condition),
      optional($.statement_separation),
      optional(alias($.scriptable_block, $.choose_case_block)),
    ),

    choose_statement_end: $ => seq(
      $.end_keyword,
      $.choose_keyword,
      optional($.statement_separation),
    ),

    local_variable_declaration_statement: $ => seq(
      $.local_variable_declaration,
      optional($.statement_separation),
    ),

    inline_statement: $ => choice(
      $.assignment_statement,
      $.call_statement,
      $.continue_statement,
      $.create_statement,
      $.destroy_statement,
      $.exit_statement,
      $.goto_statement,
      $.halt_statement,
      $.return_statement,
      $.throw_statement,
      $.expression_statement,
    ),

    assignment_statement: $ => seq(
      alias($.l_value_expression, $.l_value),
      alias(choice('=', '+=', '-=', '*=', '/=', '^='), $.operator),
      alias($.r_value_expression, $.r_value),
    ),

    expression_statement: $ => seq(
      choice(
        $.method_invocation,
        $.update_expression,
      ),
    ),

    method_invocation: $ => prec(PREC.METHOD_INVOCATION, seq(
      optional(choice(
        seq(
          alias(choice($.r_value_expression), $.method_object),
          alias('.', $.operator)
        ),
        seq(
          optional($.super_keyword),
          alias('::', $.operator),
        )
      )),
      repeat(
        choice(
          alias(choice($.function_keyword, $.event_keyword), $.method_type),
          alias(choice($.static_keyword, $.dynamic_keyword), $.call_type),
          alias(choice($.trigger_keyword, $.post_keyword), $.when_type),
        ),
      ),
      alias(choice($.identifier, $.primitive_type, $.close_keyword), $.method_name),
      $.argument_list,
    )),

    argument_list: $ => seq(
      $.open_parenthesis,
      commaSep(seq(optional($.ref_keyword), $.r_value_expression)),
      $.close_parenthesis,
    ),

    l_value_expression: $ => choice(
      $.identifier_expression,
      $.field_access,
      $.array_access,
    ),

    r_value_expression: $ => choice(
      $.l_value_expression,

      $.binary_expression,
      $.unary_expression,

      $._literal,
      $.array_literal,
      $.this_keyword,
      $.parent_keyword,
      $.enumetation_datatype,
      $.method_invocation,
      $.parenthesized_expression,
    ),

    binary_expression: $ => {
      const table = [
        { operator: '+', precedence: PREC.ADDITIVE },
        { operator: '-', precedence: PREC.ADDITIVE },
        { operator: '*', precedence: PREC.MULTIPLICATIVE },
        { operator: '/', precedence: PREC.MULTIPLICATIVE },
        { operator: '^', precedence: PREC.EXPONENTIATION },
        { operator: $.or_keyword, precedence: PREC.OR },
        { operator: $.and_keyword, precedence: PREC.AND },
        { operator: '=', precedence: PREC.EQUALITY },
        { operator: '<>', precedence: PREC.EQUALITY },
        { operator: '>', precedence: PREC.RELATIONAL },
        { operator: '<', precedence: PREC.RELATIONAL },
        { operator: '>=', precedence: PREC.RELATIONAL },
        { operator: '<=', precedence: PREC.RELATIONAL },
      ];

      return choice(...table.map(({ operator, precedence }) => {
        return prec.left(precedence, seq(
          alias($.r_value_expression, $.left_expression),
          alias(operator, $.operator),
          alias($.r_value_expression, $.right_expression),
        ));
      }));
    },

    array_access: $ => seq(
      alias($.r_value_expression, $.array_name),
      $.open_brackets,
      alias($.r_value_expression, $.array_index),
      $.close_brackets,
    ),

    enumetation_datatype: $ => seq(alias($.identifier, $.enum_name), '!'),

    identifier_expression: $ => prec(PREC.IDENTIFIER_EXPRESSION, seq(optional('::'), $.identifier, optional($.array_suffix_ref))),

    _literal: $ => choice(
      $.integer_literal,
      $.decimal_literal,
      $.real_literal,
      $.string_literal,
      $.date_literal,
      $.time_literal,
      $.boolean_literal,
    ),

    integer_literal: _ => /\d+/,
    string_literal: $ => choice(
      seq($.double_quote, alias(repeat(token.immediate(prec(1, choice(/[^"\\]/, /\\./, /~"/)))), $.string_content), $.double_quote),
      seq($.single_quote, alias(repeat(token.immediate(prec(1, choice(/[^'\\]/, /\\./, /~'/)))), $.string_content), $.single_quote),
    ),

    primitive_type: _ => choice(
      caseInsensitiveAlias('blob'),
      caseInsensitiveAlias('boolean'),
      caseInsensitiveAlias('byte'),
      caseInsensitiveAlias('char'),
      caseInsensitiveAlias('character'),
      caseInsensitiveAlias('date'),
      caseInsensitiveAlias('datetime'),
      caseInsensitiveAlias('decimal'),
      caseInsensitiveAlias('dec'),
      caseInsensitiveAlias('double'),
      caseInsensitiveAlias('integer'),
      caseInsensitiveAlias('int'),
      caseInsensitiveAlias('longlong'),
      caseInsensitiveAlias('longptr'),
      caseInsensitiveAlias('long'),
      caseInsensitiveAlias('real'),
      caseInsensitiveAlias('string'),
      caseInsensitiveAlias('time'),
      caseInsensitiveAlias('unsignedinteger'),
      caseInsensitiveAlias('unsignedint'),
      caseInsensitiveAlias('uint'),
      caseInsensitiveAlias('unsignedlong'),
      caseInsensitiveAlias('ulong'),
      caseInsensitiveAlias('any'),
    ),

    open_parenthesis: _ => '(',
    close_parenthesis: _ => ')',
    open_brackets: _ => '[',
    close_brackets: _ => ']',
    single_quote: _ => '\'',
    double_quote: _ => '"',
    statement_separation: _ => ';',

    case_keyword: _ => reservedWord('case'),
    choose_keyword: _ => reservedWord('choose'),
    close_keyword: _ => reservedWord('close'),
    commit_keyword: _ => reservedWord('commit'),
    connect_keyword: _ => reservedWord('connect'),
    cursor_keyword: _ => reservedWord('cursor'),
    declare_keyword: _ => reservedWord('declare'),
    delete_keyword: _ => reservedWord('delete'),
    describe_keyword: _ => reservedWord('describe'),
    descriptor_keyword: _ => reservedWord('descriptor'),
    disconnect_keyword: _ => reservedWord('disconnect'),
    dynamic_keyword: _ => reservedWord('dynamic'),
    end_keyword: _ => reservedWord('end'),
    execute_keyword: _ => reservedWord('execute'),
    fetch_keyword: _ => reservedWord('fetch'),
    for_keyword: _ => reservedWord('for'),
    from_keyword: _ => reservedWord('from'),
    global_keyword: _ => reservedWord('global'),
    immediate_keyword: _ => reservedWord('immediate'),
    insert_keyword: _ => reservedWord('insert'),
    into_keyword: _ => reservedWord('into'),
    of_keyword: _ => reservedWord('of'),
    open_keyword: _ => reservedWord('open'),
    prepare_keyword: _ => reservedWord('prepare'),
    procedure_keyword: _ => reservedWord('procedure'),
    rollback_keyword: _ => reservedWord('rollback'),
    select_keyword: _ => reservedWord('select'),
    selectblob_keyword: _ => reservedWord('selectblob'),
    subroutine_keyword: _ => reservedWord('subroutine'),
    update_keyword: _ => reservedWord('update'),
    updateblob_keyword: _ => reservedWord('updateblob'),
    using_keyword: _ => reservedWord('using'),
    where_keyword: _ => reservedWord('where'),
    current_keyword: _ => reservedWord('current'),

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9\-_$#%]*/,

    line_continuation: _ => '&',


    sql_statement: $ => choice(
      $.connect_statement,
      $.disconnect_statement,
      $.commit_statement,
      $.rollback_statement,
      $.fetch_statement,
      $.open_cursor_statement,
      $.close_cursor_procedure_statement,
      $.execute_statement,

      $.delete_statement,
      $.insert_statement,
      $.select_statement,
      $.update_statement,

      $.declare_cursor_statement,
      $.declare_procedure_statement,
      $.declare_dynamic_statement,
      $.describe_sql_statement,


      $.prepare_sql_statement,

      /*

      */
    ),

    close_cursor_procedure_statement: $ => seq(
      $.close_keyword,
      alias($.identifier, $.cursor_procedure_name),
      $.statement_separation,
    ),

    using_transaction_statement: $ => seq(
      $.using_keyword,
      alias($.identifier, $.transaction_name),
    ),

    commit_statement: $ => seq(
      $.commit_keyword,
      optional($.using_transaction_statement),
      $.statement_separation,
    ),

    connect_statement: $ => seq(
      $.connect_keyword,
      optional($.using_transaction_statement),
      $.statement_separation,
    ),

    declare_cursor_statement: $ => seq(
      $.declare_keyword,
      alias($.identifier, $.cursor_name),
      $.cursor_keyword,
      $.for_keyword,
      $.select_statement,
    ),

    declare_procedure_statement: $ => seq(
      $.declare_keyword,
      alias($.identifier, $.procedure_name),
      $.procedure_keyword,
      $.for_keyword,
      alias($.identifier, $.store_procedure_name),
      optional($.stored_procedure_param_list),
      optional($.using_transaction_statement),
      $.statement_separation,
    ),

    declare_dynamic_statement: $ => seq(
      $.declare_keyword,
      alias($.identifier, $.cursor_procedure_name),
      $.dynamic_keyword,
      choice($.cursor_keyword, $.procedure_keyword),
      $.for_keyword,
      alias($.identifier, $.dynamic_stage_area),
      $.statement_separation,
    ),

    describe_sql_statement: $ => seq(
      $.describe_keyword,
      alias($.identifier, $.dynamic_stage_area),
      $.into_keyword,
      alias($.identifier, $.dynamic_description_area),
      $.statement_separation,
    ),

    stored_procedure_param_list: $ => choice(
      commaSep1($.stored_procedure_param_ase),
      seq($.open_parenthesis, commaSep1($.stored_procedure_param_oracle), $.close_parenthesis),
    ),

    stored_procedure_param_ase: $ => seq(
      '@',
      alias($.identifier, $.param_name),
      '=',
      optional(':'),
      alias($.r_value_expression, $.variable_name),
    ),

    stored_procedure_param_oracle: $ => seq(
      optional(':'),
      alias($.r_value_expression, $.variable_name),
    ),

    delete_statement: $ => choice(
      seq(
        $.delete_keyword,
        $.from_keyword,
        alias($.identifier, $.table_name),
        $.where_keyword,
        alias(token(prec(1, caseInsensitiveRegExp('current'))), $.current_keyword),
        $.of_keyword,
        alias($.identifier, $.cursor_name),
        $.statement_separation,
      ),
      seq(
        $.delete_keyword,
        $.from_keyword,
        alias($.identifier, $.table_name),
        $.where_keyword,
        $.where_criteria,
        $.rest_of_sql,
        $.statement_separation,
      ),
    ),

    disconnect_statement: $ => seq(
      $.disconnect_keyword,
      optional($.using_transaction_statement),
      $.statement_separation,
    ),

    execute_statement: $ => choice(
      seq($.execute_keyword, alias($.identifier, $.procedure_name), $.statement_separation),
      $.execute_statement_immediate_case,
      seq(
        $.execute_keyword,
        alias($.identifier, $.dynamic_stage_area),
        $.using_keyword,
        commaSep1($.stored_procedure_param_oracle),
        $.statement_separation,
      ),
      seq(
        $.execute_keyword,
        $.dynamic_keyword,
        alias($.identifier, $.procedure_name),
        optional(seq(
          $.using_keyword,
          commaSep1($.stored_procedure_param_oracle),
        )),
        $.statement_separation,
      ),
      seq(
        $.execute_keyword,
        $.dynamic_keyword,
        alias($.identifier, $.procedure_name),
        $.using_keyword,
        $.descriptor_keyword,
        alias($.identifier, $.dynamic_description_area),
        $.statement_separation),
    ),

    execute_statement_immediate_case: $ => prec(PREC.IMMEDIATE_CASE, seq(
      $.execute_keyword,
      $.immediate_keyword,
      choice($.stored_procedure_param_oracle, $.string_literal),
      optional($.using_transaction_statement),
      $.statement_separation,
    )),

    fetch_statement: $ => choice(
      seq(
        $.fetch_keyword,
        alias($.identifier, $.cursor_procedure_name),
        $.into_keyword,
        $.fetch_variable_list,
        $.statement_separation,
      ),
      seq(
        $.fetch_keyword,
        alias($.identifier, $.cursor_procedure_name),
        $.using_keyword,
        $.descriptor_keyword,
        alias($.identifier, $.dynamic_stage_area),
        $.statement_separation,
      ),
    ),

    fetch_variable_list: $ => commaSep1(seq(
      ':',
      alias($.identifier, $.variable_name),
      optional(seq(
        ':',
        alias($.identifier, $.indicator_var),
      )),
    )),

    insert_statement: $ => seq(
      $.insert_keyword,
      $.rest_of_sql,
      $.statement_separation,
    ),

    rollback_statement: $ => seq(
      $.rollback_keyword,
      optional($.using_transaction_statement),
      $.statement_separation,
    ),
