test/corpus/sql_statements.txt
===
CLOSE statement
===

global subroutine test ();

CLOSE Emp_cursor ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (close_cursor_procedure_statement
              (close_keyword)
              (cursor_procedure_name)
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
COMMIT statement
===

global subroutine test ();

COMMIT USING Emp_tran ;

COMMIT ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (commit_statement
              (commit_keyword)
              (using_transaction_statement
                (using_keyword)
                (transaction_name))
              (statement_separation))))
        (statement
          (sql_statement
            (commit_statement
              (commit_keyword)
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
CONNECT statement
===

global subroutine test ();

CONNECT ;

CONNECT USING Emp_tran ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (connect_statement
              (connect_keyword)
              (statement_separation))))
        (statement
          (sql_statement
            (connect_statement
              (connect_keyword)
              (using_transaction_statement
                (using_keyword)
                (transaction_name))
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
DECLARE CURSOR statement
===

global subroutine test ();

DECLARE Emp_cur CURSOR FOR
    SELECT employee.emp_number, employee.emp_name
    FROM employee
    WHERE employee.emp_salary > :Sal_var ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (declare_cursor_statement
              (declare_keyword)
              (cursor_name)
              (cursor_keyword)
              (for_keyword)
              (select_statement
                (select_keyword)
                (rest_of_sql)
                (statement_separation))))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
DECLARE PROCEDURE statement
===

global subroutine test ();

DECLARE Emp_proc procedure for GetName
    @emp_name = :Emp_name_var,
    @emp_salary = :Emp_sal_var ;

DECLARE Emp_proc procedure for GetName
    (:Emp_name_var, :Emp_sal_var) ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (declare_procedure_statement
              (declare_keyword)
              (procedure_name)
              (procedure_keyword)
              (for_keyword)
              (store_procedure_name)
              (stored_procedure_param_list
                (stored_procedure_param_ase
                  (param_name)
                  (variable_name
                    (l_value_expression
                      (identifier_expression
                        (identifier)))))
                (stored_procedure_param_ase
                  (param_name)
                  (variable_name
                    (l_value_expression
                      (identifier_expression
                        (identifier))))))
              (statement_separation))))
        (statement
          (sql_statement
            (declare_procedure_statement
              (declare_keyword)
              (procedure_name)
              (procedure_keyword)
              (for_keyword)
              (store_procedure_name)
              (stored_procedure_param_list
                (open_parenthesis)
                (stored_procedure_param_oracle
                  (variable_name
                    (l_value_expression
                      (identifier_expression
                        (identifier)))))
                (stored_procedure_param_oracle
                  (variable_name
                    (l_value_expression
                      (identifier_expression
                        (identifier)))))
                (close_parenthesis))
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
DELETE statement
===

global subroutine test ();

DELETE FROM Employee WHERE Emp_num < 100 ;

DELETE FROM Employee
    WHERE Employee.Emp_num = :Emp_num ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (delete_statement
              (delete_keyword)
              (from_keyword)
              (table_name)
              (where_keyword)
              (where_criteria
                (rest_of_sql))
              (rest_of_sql)
              (statement_separation))))
        (statement
          (sql_statement
            (delete_statement
              (delete_keyword)
              (from_keyword)
              (table_name)
              (where_keyword)
              (where_criteria
                (rest_of_sql))
              (rest_of_sql)
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
DELETE WITH CURSOR statement
===

global subroutine test ();

DELETE FROM Employee WHERE current of Emp_curs ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (delete_statement
              (delete_keyword)
              (from_keyword)
              (table_name)
              (where_keyword)
              (current_keyword)
              (of_keyword)
              (cursor_name)
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
DISCONNECT statement
===

global subroutine test ();

DISCONNECT ;
DISCONNECT USING Emp_tran ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (disconnect_statement
              (disconnect_keyword)
              (statement_separation))))
        (statement
          (sql_statement
            (disconnect_statement
              (disconnect_keyword)
              (using_transaction_statement
                (using_keyword)
                (transaction_name))
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
EXECUTE statement
===

global subroutine test ();

EXECUTE Emp_proc ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (execute_statement
              (execute_keyword)
              (procedure_name)
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
FETCH statement
===

global subroutine test ();

FETCH Emp_cur INTO :Emp_num, :Emp_name ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (fetch_statement
              (fetch_keyword)
              (cursor_procedure_name)
              (into_keyword)
              (fetch_variable_list
                (variable_name)
                (variable_name))
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
INSERT statement
===

global subroutine test ();

INSERT INTO Employee (employee.Emp_nbr,
    employee.Emp_name)
    VALUES (:EmpNbr, :EmpName) ;

INSERT INTO Employee (employee.Emp_nbr,
    employee.Emp_name)
    VALUES (:EmpNbr, :EmpName) USING Emp_tran ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (insert_statement
              (insert_keyword)
              (rest_of_sql)
              (statement_separation))))
        (statement
          (sql_statement
            (insert_statement
              (insert_keyword)
              (rest_of_sql)
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
OPEN statement
===

global subroutine test ();

OPEN Emp_curs ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (open_cursor_statement
              (open_keyword)
              (cursor_name)
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
ROLLBACK statement
===

global subroutine test ();

ROLLBACK ;

ROLLBACK USING emp_tran ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (rollback_statement
              (rollback_keyword)
              (statement_separation))))
        (statement
          (sql_statement
            (rollback_statement
              (rollback_keyword)
              (using_transaction_statement
                (using_keyword)
                (transaction_name))
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
SELECT statement
===

global subroutine test ();

SELECT employee.Emp_LName, employee.Emp_FName
INTO :Emp_lname, :Emp_fname
FROM Employee
WHERE Employee.Emp_nbr = :Emp_num
USING Emp_tran ;

SELECTBLOB Emp_pic
INTO :Emp_id_pic
FROM Employee
WHERE Employee.Emp_Num = 100
USING Emp_tran ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (select_statement
              (select_keyword)
              (rest_of_sql)
              (statement_separation))))
        (statement
          (sql_statement
            (select_statement
              (selectblob_keyword)
              (rest_of_sql)
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
UPDATE statement
===

global subroutine test ();

UPDATE Employee
    SET emp_name = :sle_Name.Text
    WHERE Employee.emp_num = :Emp_num
    USING Emp_tran ;

UPDATEBLOB Employee SET emp_pic = :Emp_id_pic
    WHERE Emp_num = 100
    USING Emp_tran ;

UPDATE Employee
    SET salary = 17800
    WHERE CURRENT of Emp_curs ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (update_statement
              (update_keyword)
              (table_name)
              (rest_of_sql)
              (statement_separation))))
        (statement
          (sql_statement
            (update_statement
              (updateblob_keyword)
              (table_name)
              (rest_of_sql)
              (statement_separation))))
        (statement
          (sql_statement
            (update_statement
              (update_keyword)
              (table_name)
              (rest_of_sql)
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
EXECUTE IMMEDIATE statement
===

global subroutine test ();

EXECUTE IMMEDIATE :Mysql ;
EXECUTE IMMEDIATE :Mysql USING My_trans ;
EXECUTE IMMEDIATE 'select aijfeiajiejgf' USING My_trans ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (execute_statement
              (execute_statement_immediate_case
                (execute_keyword)
                (immediate_keyword)
                (stored_procedure_param_oracle
                  (variable_name
                    (l_value_expression
                      (identifier_expression
                        (identifier)))))
                (statement_separation)))))
        (statement
          (sql_statement
            (execute_statement
              (execute_statement_immediate_case
                (execute_keyword)
                (immediate_keyword)
                (stored_procedure_param_oracle
                  (variable_name
                    (l_value_expression
                      (identifier_expression
                        (identifier)))))
                (using_transaction_statement
                  (using_keyword)
                  (transaction_name))
                (statement_separation)))))
        (statement
          (sql_statement
            (execute_statement
              (execute_statement_immediate_case
                (execute_keyword)
                (immediate_keyword)
                (string_literal
                  (single_quote)
                  (string_content)
                  (single_quote))
                (using_transaction_statement
                  (using_keyword)
                  (transaction_name))
                (statement_separation))))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
PREPARE and EXECUTE dynamic sql format 2
===

global subroutine test ();

PREPARE SQLSA
FROM "DELETE FROM employee WHERE emp_id=?" ;
EXECUTE SQLSA USING :Emp_id_var ;

PREPARE SQLSA
FROM "INSERT INTO dept VALUES (?,?)" ;
EXECUTE SQLSA USING :Dept_id_var,:Dept_name_var ;

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (sql_statement
            (prepare_sql_statement
              (prepare_keyword)
              (dynamic_staging_area)
              (from_keyword)
              (sql_statement
                (double_quote)
                (string_content)
                (double_quote))
              (statement_separation))))
        (statement
          (sql_statement
            (execute_statement
              (execute_keyword)
              (dynamic_stage_area)
              (using_keyword)
              (stored_procedure_param_oracle
                (variable_name
                  (l_value_expression
                    (identifier_expression
                      (identifier)))))
              (statement_separation))))
        (statement
          (sql_statement
            (prepare_sql_statement
              (prepare_keyword)
              (dynamic_staging_area)
              (from_keyword)
              (sql_statement
                (double_quote)
                (string_content)
                (double_quote))
              (statement_separation))))
        (statement
          (sql_statement
            (execute_statement
              (execute_keyword)
              (dynamic_stage_area)
              (using_keyword)
              (stored_procedure_param_oracle
                (variable_name
                  (l_value_expression
                    (identifier_expression
                      (identifier)))))
              (stored_procedure_param_oracle
                (variable_name
                  (l_value_expression
                    (identifier_expression
                      (identifier)))))
              (statement_separation)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

===
dynamic sql format 3
===

global subroutine test ();

DECLARE my_cursor DYNAMIC CURSOR FOR SQLSA ;
PREPARE SQLSA FROM "SELECT emp_id FROM employee" ;
OPEN DYNAMIC my_cursor ;
FETCH my_cursor INTO :Emp_id_var ;
CLOSE my_cursor ;

PREPARE SQLSA FROM :sqlstatement ;
OPEN DYNAMIC my_cursor using :Emp_state_var ;
FETCH my_cursor INTO :Emp_id_var ;
CLOSE my_cursor ;

PREPARE SQLSA FROM "emp_select @stateparm=?" ;
Emp_state_var = "MA"
EXECUTE DYNAMIC my_proc USING :Emp_state_var ;
FETCH my_proc INTO :Emp_id_var ;
CLOSE my_proc ;

end subroutine

---
